RESOLVED FIXED316293
WebGPU: RenderPipeline/ComputePipeline creation failure lacks detailed validation error
https://bugs.webkit.org/show_bug.cgi?id=316293
Summary WebGPU: RenderPipeline/ComputePipeline creation failure lacks detailed valida...
mickgorobets
Reported 2026-06-04 01:46:11 PDT
Created attachment 479977 [details] Error Log Hello, When launching my WASM/WebGPU application, errors occur during the creation of RenderPipeline and ComputePipeline objects, but Safari does not display any detailed diagnostic or validation message. URL: https://grenzwert.net/wasm-modules/MedicalViewer/MedicalViewer In Google Chrome, the application starts successfully without any pipeline state object creation errors. Also, when an issue is caused by user-side WebGPU code, Chrome usually provides detailed information in the console log, which makes the problem much easier to diagnose. Environment: - Device: MacBook Pro - GPU: Apple M3 Max - OS: macOS 26.5 - Browser: Safari 26.6 - Works in Chrome: Yes - Firefox: Not a valid comparison in this case, because the application requires texture-formats-tier1, which is currently not supported there Expected result: The application should either create the render and compute pipelines successfully, or Safari should provide a detailed WebGPU validation/diagnostic message explaining why pipeline creation failed. Actual result: Pipeline creation fails in Safari, but no detailed error message is shown. Could you please investigate this issue, or improve the diagnostic output for WebGPU pipeline creation failures in Safari?
Attachments
Error Log (164.97 KB, image/png)
2026-06-04 01:46 PDT, mickgorobets
no flags
Attaching shader source (42.96 KB, text/plain)
2026-06-15 11:51 PDT, Mike Wyrzykowski
no flags
works-after-that-change (5.94 MB, image/png)
2026-06-15 12:14 PDT, Mike Wyrzykowski
no flags
Radar WebKit Bug Importer
Comment 1 2026-06-11 01:47:11 PDT
Mike Wyrzykowski
Comment 2 2026-06-15 11:49:35 PDT
It looks like a shader is failing to compile. We do generate a validation error at GPUShaderModule creation time, but it looks like this isn't passed through to the render or compute pipeline creation. 328:30: no matching overload for initializer textureSampleLevel(ref<handle, texture_1d<f32>, read>, ref<handle, sampler, read>, f32, f32)
Mike Wyrzykowski
Comment 3 2026-06-15 11:51:05 PDT
Created attachment 480108 [details] Attaching shader source
Mike Wyrzykowski
Comment 4 2026-06-15 11:51:25 PDT
Failing line is: let v_164 = textureSampleLevel(g_TF_Opacity, g_TextureLUT_sampler, v_163, 0.0f).x;
Mike Wyrzykowski
Comment 5 2026-06-15 11:52:58 PDT
@group(1u) @binding(5u) var g_TF_Opacity : texture_1d<f32>; @group(0u) @binding(2u) var g_TextureLUT_sampler : sampler; v_163 is a float
mickgorobets
Comment 6 2026-06-15 12:00:30 PDT
The `textureSampleLevel` signature seems valid according to the specification. https://www.w3.org/TR/WGSL/#texturesamplelevel
Mike Wyrzykowski
Comment 7 2026-06-15 12:14:31 PDT
Created attachment 480109 [details] works-after-that-change
Mike Wyrzykowski
Comment 8 2026-06-15 12:24:38 PDT
mickgorobets
Comment 9 2026-06-15 12:25:36 PDT
Thanks you
Mike Wyrzykowski
Comment 10 2026-06-15 12:35:54 PDT
Filed https://bugs.webkit.org/show_bug.cgi?id=317143 to improve the error message during pipeline creation
EWS
Comment 11 2026-06-16 05:29:37 PDT
Committed 315278@main (5b1956e908ba): <https://commits.webkit.org/315278@main> Reviewed commits have been landed. Closing PR #67197 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.