1D textureSampleLevel was not supported https://bugs.webkit.org/show_bug.cgi?id=316293 rdar://179334632

Reviewed by Tadeu Zagallo and Dan Glastonbury.

Add support for 1D textureSampleLevel calls, which is required
by the specification.

Test: Tools/TestWebKitAPI/Tests/WGSL/shaders/overload.wgsl

* Source/WebGPU/WGSL/Metal/MetalFunctionWriter.cpp:
(WGSL::Metal::emitTextureSampleLevel):
* Source/WebGPU/WGSL/TypeDeclarations.rb:
* Tools/TestWebKitAPI/Tests/WGSL/shaders/overload.wgsl:

Canonical link: https://commits.webkit.org/315278@main