Tools/TestWebKitAPI/Tests/WGSL/shaders/overload.wgsl
@@ -4577,6 +4577,9 @@ fn testTextureSampleGrad()
 @compute @workgroup_size(1)
 fn testTextureSampleLevel()
 {
+    // [].(Texture[F32, Texture1d], Sampler, F32, F32) => Vector[F32, 4],
+    _ = textureSampleLevel(t1d, s, 0, 0);
+
     // [].(Texture[F32, Texture2d], Sampler, Vector[F32, 2], F32) => Vector[F32, 4],
     _ = textureSampleLevel(t2d, s, vec2f(0), 0);
 
